<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_DayOfMonth" Id="{cd5055c7-819b-0afe-3a82-9b9db0bd00ae}">
    <Declaration><![CDATA[// Represents the day of the current month, with values ranging from 1 to 31, based on the month.
TYPE T_DayOfMonth : UINT(1..31); END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>