<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_Minute" Id="{782fa4ad-56a0-09df-3030-03304074781f}">
    <Declaration><![CDATA[// Represents the minutes of the current hour, ranging from 0 to 59.
TYPE T_Minute : UINT(0..59); END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>